# ia

grafos/: CMakeLists.txt  Cargo.toml  compile_flags.txt  exemplo.txt  grafo.dot  romania.txt
grafos/include/: Util.h
grafos/include/Grafo/: Aresta.h  Caminho.h  Cor.h  Grafo.h  Heuristica.h  Vertice.h
grafos/src/: Aresta.cpp  Caminho.cpp  Grafo.cpp  Heuristica.cpp  Util.cpp  Vertice.cpp  lib.rs  main.cpp
iris/: main.py
